# moon_rs

./: .emmyrc.json  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  claude.md
.cargo/: config.toml
.claude/skills/moon-async-module/: SKILL.md  io_extension_design.md  reference.md  templates.md
.claude/skills/moon-code-review/: SKILL.md
.claude/skills/moon-lua-service/: SKILL.md  templates.md
.claude/skills/moon-native-ext/: SKILL.md
.claude/skills/moon-profiling/: SKILL.md  ab_zset.py  analyze_samply.py  parse_profile.py
.github/workflows/: build.yml
assets/: benchmark_call.lua  benchmark_create_service.lua  benchmark_httpd.lua  benchmark_send.lua  benchmark_socket.lua  call_benchmark.lua  example.lua  example_buffer.lua  example_httpd.lua  example_mongodb.lua  example_pg.lua  example_redis.lua  example_sqlx.lua  json.lua  main.lua  send_benchmark.lua  seri.lua  socket.lua  test_buffer.lua  test_endless_loop.lua  test_http.lua  test_httpd.lua  test_httpserver.lua  test_json.lua  test_socket.lua  test_sqlx_mysql_types.lua  test_sqlx_postgres_types.lua  worker.lua
assets/benchmark/: benchmark_call.lua  benchmark_db.lua  benchmark_grpc.lua  benchmark_httpd.lua  benchmark_namesearch.lua  benchmark_redis.lua  benchmark_send.lua  benchmark_socket.lua  benchmark_socket_frame.lua  benchmark_socket_multi.lua  benchmark_zset.lua
assets/example/: example.lua  example_grpc.lua  example_httpd.lua  example_mongodb.lua  example_mutex.lua  example_pg.lua  example_redis.lua  example_sqlx.lua  example_wait_all.lua
assets/example/cluster/: cluster_etc.lua  node.json  node.lua
assets/test/: httpd_fixtures.lua  redis_stream.lua  test_buffer.lua  test_cluster.lua  test_cluster_selfconnect.lua  test_endless_loop.lua  test_grpc.lua  test_http.lua  test_httpd.lua  test_json.lua  test_mongodb.lua  test_mongodb_stream.lua  test_pg.lua  test_random.lua  test_redis.lua  test_schema.lua  test_seri.lua  test_sharetable.lua  test_socket.lua  test_socket_frame.lua  test_sqlx_mysql_types.lua  test_sqlx_postgres_types.lua  test_sqlx_stream.lua  test_tobeclose.lua  test_watchdog_coroutine.lua  test_watchdog_interrupt.lua  test_websocket.lua  test_zset.lua  twitter-out.json
assets/test/grpc/: helloworld.pb  helloworld.proto  test_grpc_server.lua
crates/exec/moon-rs/: Cargo.toml
crates/exec/moon-rs/src/: main.rs
crates/libs/actor/: Cargo.toml
crates/libs/actor/src/: actor.rs  buffer.rs  context.rs  error.rs  lib.rs
crates/libs/lib-common-sys/: Cargo.toml  build.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: actor.rs  buffer.rs  context.rs  error.rs  laux.rs  lib.rs  log.rs  macros.rs
crates/libs/lib-lua-sys/: Cargo.toml  build.rs
crates/libs/lib-lua-sys/lua54/: clonefunc.c  lauxlib.c
crates/libs/lib-lua-sys/lualib-src/: lua_json_decode.c
crates/libs/lib-lua-sys/lualib-src/yyjson/: yyjson.c  yyjson.h
crates/libs/lib-lua-sys/src/: laux.rs  lib.rs  macros.rs
crates/libs/lib-lua-sys/src/lua54/: lauxlib.rs  lua.rs  lualib.rs  mod.rs
crates/libs/lib-lualib-rs/: Cargo.toml
crates/libs/lib-lualib-rs/src/: lib.rs  lua_actor.rs  lua_buffer.rs  lua_excel.rs  lua_fs.rs  lua_http.rs  lua_json.rs  lua_mongodb.rs  lua_seri.rs  lua_socket.rs  lua_sqlx.rs  lua_utils.rs
crates/libs/lib-lualib-rs/tests/: seri_json_test.rs
crates/libs/lualib/: Cargo.toml
crates/libs/lualib/src/: lib.rs  lua_actor.rs  lua_buffer.rs  lua_excel.rs  lua_fs.rs  lua_http.rs  lua_httpc.rs  lua_httpd.rs  lua_json.rs  lua_mongodb.rs  lua_seri.rs  lua_socket.rs  lua_sqlx.rs  lua_thrift.rs  lua_utils.rs  lua_websocket.rs
crates/libs/lualib/tests/: seri_json_test.rs
crates/moon-app/: Cargo.toml  build.rs
crates/moon-app/src/: main.rs
crates/moon-base/: Cargo.toml  build.rs
crates/moon-base/lualib-src/: lua_json_decode.c
crates/moon-base/src/: buffer.rs  lib.rs
crates/moon-base/src/lua55/: lua.rs
crates/moon-game/: Cargo.toml
crates/moon-game/benches/: stress_aoi.rs
crates/moon-game/src/: aoi.rs  lib.rs  math.rs
crates/moon-game/src/aoi/: tests.rs
crates/moon-lua/: Cargo.toml  build.rs
crates/moon-lua/src/: laux.rs  lib.rs  macros.rs
crates/moon-modules/: Cargo.toml
crates/moon-modules/src/: lib.rs  lua_actor.rs  lua_buffer.rs  lua_cluster.rs  lua_coroutine.rs  lua_excel.rs  lua_fs.rs  lua_httpc.rs  lua_httpd.rs  lua_json.rs  lua_mongodb.rs  lua_pg.rs  lua_random.rs  lua_redis.rs  lua_seri.rs  lua_socket.rs  lua_sqlx.rs  lua_utils.rs  lua_websocket.rs  message_decode.rs  request_pool.rs
crates/moon-runtime/: Cargo.toml
crates/moon-runtime/src/: actor.rs  buffer.rs  context.rs  lib.rs  log.rs  message_decode.rs  request_pool.rs
crates/moon-runtime/src/modules/: lua_actor.rs  lua_buffer.rs  lua_cluster.rs  lua_coroutine.rs  lua_excel.rs  lua_fs.rs  lua_grpc.rs  lua_httpc.rs  lua_httpd.rs  lua_json.rs  lua_mongodb.rs  lua_pg.rs  lua_protobuf.rs  lua_random.rs  lua_redis.rs  lua_schema.rs  lua_seri.rs  lua_socket.rs  lua_sqlx.rs  lua_utils.rs  lua_websocket.rs  lua_zset.rs
crates/tests/: buffer.rs
docs/: cluster.md  grpc.md  httpc.md  httpd.md  mongodb.md  pg.md  redis.md  socket.md  sqlx.md  stats.md
lualib/: hotfix.lua  moon.lua
lualib/base/: util.lua
lualib/collections/: queue.lua
lualib/meta/: buffer.lua  excel.lua  fs.lua  json.lua  protobuf.lua  random.lua  runtime.lua  schema.lua  seri.lua  utils.lua  zset.lua
lualib/meta/cluster/: core.lua
lualib/meta/grpc/: core.lua
lualib/meta/httpc/: core.lua
lualib/meta/httpd/: core.lua
lualib/meta/mongodb/: core.lua
lualib/meta/moon/: core.lua
lualib/meta/net/: core.lua
lualib/meta/pg/: core.lua
lualib/meta/redis/: core.lua
lualib/meta/sqlx/: core.lua
lualib/meta/ws/: core.lua
lualib/moon/: cluster.lua  grpc.lua  httpd.lua  mutex.lua  namesearch.lua  sharetable.lua  socket.lua  task.lua  websocket.lua
lualib/moon/api/: buffer.lua  core.lua  json.lua  runtime.lua
lualib/moon/db/: mongodb.lua  mysql.lua  pg.lua  redis.lua  socketchannel.lua  sqlx.lua
lualib/moon/http/: client.lua  internal.lua  server.lua
xtask/: Cargo.toml
xtask/src/: main.rs
(+4 files in other folders)
