[workspace.lints.rust]
# unsafe_code = "forbid"
# unused = "allow" # For experimental dev.

[workspace]
resolver = "2"
members = [
    # -- Application Libraries
    "crates/libs/lib-lua-sys",
    "crates/libs/lib-common-sys",
    "crates/libs/lib-core",
    "crates/libs/lib-lualib-rs",

    # -- Executable
    "crates/exec/moon-rs",

    # -- Tools
    # "crates/tools/gen-key",    
]

[workspace.dependencies]
lib-core = { path = "crates/libs/lib-core"}
lib-lualib-rs = { path = "crates/libs/lib-lualib-rs"}
lib-lua = {package = "lib-lua-sys", path = "crates/libs/lib-lua-sys",features = ["lua54"]}
lib-common = {package= "lib-common-sys", path = "crates/libs/lib-common-sys", version = "0.1.0"}

mimalloc = "0.1.39"
tokio = { version = "1", features = ["full"] }
log = "0.4.0"
dashmap = "6.1"
lazy_static = "1.4.0"
reqwest = { version = "0.12", features = ["rustls-tls","trust-dns"],default-features = false}
serde = { version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
colored = "2.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = {version = "2", features = ["from"]}
calamine = "0.27"
csv = "1.3.0"
num_cpus = "1.16.0"

bytes = "1.5.0"
base64 = "^0.22"
sha2 = "0.10"
md-5 = "0.10.6"
sha1 = "0.10.6"

httparse = "1.8.0"
percent-encoding = "2.3.1"
form_urlencoded = "1.2.1"
url = "2.5.0"

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "mysql"] }
mongodb = "3.2"
futures = "0.3"

#[profile.release]
#lto = true