[workspace.lints.rust]
# unsafe_code = "forbid"
# unused = "allow" # For experimental dev.

[workspace]
resolver = "2"
members = [
    # -- Application Libraries
    "crates/libs/actor",
    "crates/libs/lualib",

    # -- Executable
    "crates/exec/moon-rs",

    # -- Tools
]

[workspace.dependencies]
actor = { path = "crates/libs/actor"}
lualib = { path = "crates/libs/lualib"}
luars = { path = "/Users/bruce/GitProjects/lua-rs/crates/luars", features = ["serde", "shared-proto"] }

mimalloc = "0.1.39"
tokio = { version = "1", features = ["full"] }
log = "0.4.0"
dashmap = "6.1"
lazy_static = "1.4.0"
reqwest = { version = "^0.13", features = ["rustls"], default-features = false}
serde = { version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
colored = "3.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = {version = "2", features = ["from"]}
thiserror = "2"
calamine = "^0.35"
csv = "1.3.0"
num_cpus = "1.16.0"

bytes = "1.5.0"
base64 = "^0.22"
sha2 = "0.11"
md-5 = "0.11"
sha1 = "0.11"

httparse = "1.8.0"
percent-encoding = "2.3.1"
form_urlencoded = "1.2.1"
url = "2.5.0"

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "mysql"] }
mongodb = "3.2"
futures = "0.3"
phf = { version = "0.11", features = ["macros"] }

[profile.release]
# strip = true
# codegen-units = 1
# lto = true
# panic = "abort"