[package]
name = "moon-app"
version = "0.1.0"
edition = "2024"
default-run = "moon_rs"

[[bin]]
name = "moon_rs"
path = "src/main.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
moon-runtime = { workspace = true }
moon-base = { workspace = true }
mimalloc = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
rustls = { workspace = true }

