[package]
name = "moon-runtime"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
moon-lua = { workspace = true}
tokio = { workspace = true}
dashmap = { workspace = true}
lazy_static = { workspace = true}
log = { workspace = true}
reqwest = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
colored = { workspace = true}
chrono = { workspace = true}
derive_more = { workspace = true}
num_cpus = "1"