[package]
name = "moon-runtime"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
default = ["excel", "httpc", "httpd", "websocket", "pg", "redis", "cluster", "protobuf", "sqlx", "mongodb"]
excel = ["dep:calamine", "dep:csv"]
httpc = ["dep:reqwest", "dep:httparse", "dep:percent-encoding", "dep:form_urlencoded", "dep:url"]
httpd = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:tokio-util", "dep:futures-util", "dep:httpdate"]
sqlx = ["dep:sqlx", "dep:phf", "dep:uuid"]
mongodb = ["dep:mongodb", "dep:futures"]
websocket = ["dep:tokio-tungstenite", "dep:futures-util"]
pg = ["dep:url"]
redis = []
cluster = ["httpc"]
# Pure-Rust serializers (no optional crate deps); feature flags just gate the modules.
protobuf = []

[dependencies]
moon-base = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }

# Runtime core (formerly the moon-runtime crate)
colored = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }

bytes = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
sha1 = { workspace = true }
rand = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

dashmap = { workspace = true }
lazy_static = { workspace = true }
socket2 = "0.6"
lexical-core = { workspace = true }
memchr = { workspace = true }

# Optional: Excel
calamine = { workspace = true, optional = true }
csv = { workspace = true, optional = true }

# Optional: HTTP client
reqwest = { workspace = true, optional = true }
httparse = { workspace = true, optional = true }
percent-encoding = { workspace = true, optional = true }
form_urlencoded = { workspace = true, optional = true }
url = { workspace = true, optional = true }

# Optional: HTTP server
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }

# Optional: SQLx
sqlx = { workspace = true, optional = true }
phf = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

# Optional: MongoDB
mongodb = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

# Optional: HTTP date formatting/parsing
httpdate = { workspace = true, optional = true }

# Optional: WebSocket
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

[dev-dependencies]
serial_test = "3.5.0"
