[package]
name = "moon_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-core = { workspace = true }
lib-lualib-rs = { workspace = true }
lib-lua ={ workspace = true }
lib-common = { workspace = true }
mimalloc = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }

