[package]
name = "moon_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor = { workspace = true }
lualib = { workspace = true }
luars = { workspace = true }
mimalloc = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }

