[package]
name = "actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
luars = { workspace = true}
tokio = { workspace = true}
dashmap = { workspace = true}
lazy_static = { workspace = true}
log = { workspace = true}
reqwest = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
colored = { workspace = true}
chrono = { workspace = true}
derive_more = { workspace = true}
thiserror = { workspace = true}