[package]
name = "lib-lualib-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
lib-core = { path = "../../libs/lib-core"}
lib-lua = {package = "lib-lua-sys", path = "../../libs/lib-lua-sys",features = ["lua54"]}
lib-common = {package= "lib-common-sys", path = "../../libs/lib-common-sys", version = "0.1.0"}
tokio = { version = "1", features = ["full"] }
log = "0.4.0"
calamine = "0.22.1"
csv = "1.3.0"
num_cpus = "1.16.0"

rustls = "0.22.4"
bytes = "1.5.0"
base64 = "0.21.5"
sha2 = "0.10"
md-5 = "0.10.6"
sha1 = "0.10.6"

reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false}
serde = { version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}