[package]
name = "lualib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
actor = { workspace = true}
luars = { workspace = true}
tokio = { workspace = true}
log = { workspace = true}
calamine = { workspace = true}
csv = { workspace = true}
num_cpus = { workspace = true}

bytes = { workspace = true}
base64 = { workspace = true}
sha2 = { workspace = true}
md-5 = { workspace = true}
sha1 = { workspace = true}

reqwest = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
httparse = { workspace = true}
percent-encoding = { workspace = true}
form_urlencoded = { workspace = true}
url = { workspace = true}

sqlx = { workspace = true}
chrono = { workspace = true}
uuid = { workspace = true}
mongodb = { workspace = true}
futures = { workspace = true}
futures-util = { workspace = true}
tokio-tungstenite = { workspace = true}

hyper = { workspace = true}
hyper-util = { workspace = true}
http-body-util = { workspace = true}
tokio-util = { workspace = true}

dashmap = { workspace = true}
lazy_static = { workspace = true}
phf = { workspace = true}